--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "joaquin",
-    "password": 62391074,
+    "username": "username",
+    "password": "password",
     "database": "beers_directory",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "joaquin",
-    "password": 62391074,
+    "username": "username",
+    "password": "password",
     "database": "beers_directory",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "joaquin",
-    "password": 62391074,
+    "username": "username",
+    "password": "password",
     "database": "beers_directory",
     "host": "127.0.0.1",
     "dialect": "postgres"
